# system_driver

./: .gitignore  README.md
android/: README.md  install.sh
android/MemxSampleApp/: gradle.properties  settings.gradle.kts
android/MemxSampleApp/app/: build.gradle.kts
android/MemxSampleApp/app/nativelib/: build.gradle.kts
android/MemxSampleApp/app/nativelib/src/main/cpp/: CMakeLists.txt  dfp.cpp  nativelib.cpp
android/MemxSampleApp/app/src/main/: AndroidManifest.xml
android/MemxSampleApp/gradle/: libs.versions.toml
android/MemxSampleApp/gradle/wrapper/: gradle-wrapper.properties
android/MemxYoloDemo/: settings.gradle.kts
android/MemxYoloDemo/app/: build.gradle.kts
android/MemxYoloDemo/app/jnilib/: build.gradle.kts
android/MemxYoloDemo/app/src/main/: AndroidManifest.xml
android/MemxYoloDemo/gradle/wrapper/: gradle-wrapper.properties
binary_release/firmware/cascade/: cascade.raw
binary_release/firmware/raspberry_console/: cascade.uf2
binary_release/windows_driver/kdriver/pcie/debug_no_signed/: mxapcik.cer
binary_release/windows_driver/kdriver/pcie/debug_no_signed/mxapcik/: kmdfmemxpci.cat  mxapcik.sys
binary_release/windows_driver/kdriver/pcie/product_signed/mxapcik/: kmdfmemxpci.cat  memryx.inf  mxapcik.sys
binary_release/windows_driver/kdriver/usb/debug_no_signed/: kdriver.cer
binary_release/windows_driver/kdriver/usb/debug_no_signed/kdriver/: kdriver.sys  kmdfmemxusb.cat
binary_release/windows_driver/kdriver/usb/product_signed/mxausbk/: kdriver.sys  kmdfmemxusb.cat  memryx.inf
binary_release/windows_driver/udriver/: memx_download_flash_firmware.py  memx_list_device_info.py  mxa.cp311-win_amd64.pyd  udriver.lib
binary_release/windows_driver/udriver/include/memx/: memx.h
docs/: CMakeLists.txt  README.md  memx_c_example1.cpp  memx_c_example2.cpp  memx_c_example3.cpp  memx_c_example4.cpp  memx_c_examplex.cpp  memx_py_example1.py  memx_py_example2.py  memx_py_example3.py  memx_py_example4.py
jnilib/: CMakeLists.txt  MemxHeader.java  MemxJni.java  convert.cpp  dfp.cpp  memx_jni.cpp  mxpack.cpp
jnilib/include/utils/: mxpack.h
kdriver/include/: memx_ioctl.h
kdriver/linux/pcie/: Makefile  memx_cascade_pciemain.c  memx_dma.c  memx_dma.h  memx_feature.c  memx_fs.c  memx_fs.h  memx_fs_proc.c  memx_fs_sys.c  memx_fw_cmd.c  memx_fw_log.h  memx_msix_irq.c  memx_msix_irq.h  memx_pcie.h
kdriver/linux/usb/: Makefile  memx_cascade_usb.h  memx_cascade_usbmain.c  memx_feature.c  memx_fs.c  memx_fs.h  memx_fs_proc.c  memx_fs_sys.c
kdriver/windows/pcie/: README.md  device.c  device.h  driver.c  driver.h  kdriver.filters  kdriver.sln  kdriver.vcxproj  kdriver.vcxproj.filters  memryx.inf  memx_dma.c  memx_dma.h  public.h  queue.c  queue.h  trace.h
kdriver/windows/usb/: README.md  kdriver.Filters  kdriver.sln  kdriver.vcxproj  memryx.inx  memryx.vsconfig
kdriver/windows/usb/src/: device.c  driver.c  private.h  queue.c  trace.h
packaging/: 50-memxchip.rules
packaging/deb/: fw  memx-sysfs.conf  mx_arm_setup  mx_set_powermode600  power.conf500  power.conf600  udriver  udriver_build.sh
packaging/deb/debian/: changelog  control  copyright  memx-drivers.dkms  memx-drivers.udev  postinst  preinst  rules  templates
packaging/deb/flash_update_tool/aarch64/: mxfw_check_version  mxfw_pcie_update_flash  mxfw_read_fwver
packaging/deb/flash_update_tool/riscv64/: mxfw_check_version  mxfw_pcie_update_flash  mxfw_read_fwver
packaging/deb/flash_update_tool/x86_64/: mxfw_check_version  mxfw_pcie_update_flash  mxfw_read_fwver
packaging/deb/src/: include  pcie  usb
packaging/generic/: build.sh  install.sh  install_stub.sh
packaging/generic/data/: 50-memxchip.rules  memx-sysfs.conf
packaging/generic/data/include/: MxAccl.h  MxModel.h  dfp.h  memx.h  memx_command.h  memx_common.h  memx_list.h  memx_platform.h  memx_ringbuffer.h  memx_status.h
packaging/generic/data/include/utils/: errors.h  featureMap.h  gbf.h  general.h  logging.h  mxTypes.h  path.h  sync_queue.hpp  thread_pool.hpp
packaging/generic/data/kdriver/: include  pcie  usb
pymodule/: memxmodule.c
tools/flash_update_tool/pcie/: README  env.sh  update_image.sh
tools/flash_update_tool/pcie/windows/: README.md  update_flash.bat
tools/flash_update_tool/usb/: README.md
tools/flash_update_tool/usb/aarch64/: memx_usb_update_flash_tool
tools/flash_update_tool/usb/x86_64/: memx_usb_update_flash_tool
tools/uart2ahb/: README  memr.py  uart_WrLoader.raw  uart_WrLodaer.py  uart_read.py
tools/uart2ahb/lib/: __init__.py  memx_uart2ahb.py  mxccif.py  mxio.py  mxmpu.py  mxuart2ahb.py  mxusb.py
tools/user_app/: README.md
udriver/: .gitignore  CMakeLists.txt  Makefile  build_android.sh  memx.c  resource.h  udriver.aps  udriver.filters  udriver.rc  udriver.sln  udriver.vcxproj  udriver.vcxproj.filters
udriver/dfp/: memx_dfp.c  mxpack.c
udriver/gbf/: memx_gbf.c
udriver/include/common/: memx.h  memx_common.h  memx_global_config.h  memx_log.h  memx_platform.h  memx_status.h
udriver/include/dfp/: memx_dfp.h  mxpack.h
udriver/include/gbf/: memx_gbf.h
udriver/include/mpu/: memx_cascade.h  memx_cascadeplus.h  memx_device_manager.h  memx_mpu.h  memx_mpu_comm.h
udriver/include/mpuio/: memx_ioctl.h  memx_mpuio.h  memx_mpuio_comm.h  memx_pcie.h  memx_pcie_xflow.h  memx_usb.h
udriver/include/platform/windows/: pch.h
udriver/include/tool/: memx_profile.h
udriver/include/util/: memx_list.h  memx_ringbuffer.h
udriver/mpu/: memx_cascade.c  memx_cascadeplus.c  memx_device_manager.c  memx_mpu.c
udriver/mpuio/: memx_mpuio.c  memx_mpuio_comm.c  memx_pcie.c  memx_pcie_xflow.c  memx_usb.c
udriver/platform/: memx_platform.c
udriver/test/: memx_test.h
udriver/test/gbf/: test_memx_gbf.c
udriver/test/mpu/: test_memx_cascade.c
udriver/test/mpuio/: test_memx_ccif.c  test_memx_uart2ahb.c
udriver/test/util/: test_memx_list.c  test_memx_ringbuffer.c
udriver/udriver20/: dfp.cpp  dfp.h  fifo_queue.h  mx_api.cpp  mx_api.h
udriver/util/: memx_list.c  memx_log.c  memx_ringbuffer.c
(+28 files in other folders)
